# statphys

./: .gitignore  README.md  Statphys.sln
Statphys/: CMakeLists.txt  Demonstration.cpp  Demonstration.h  DemonstrationState.cpp  DemonstrationState.h  MainMenuState.cpp  MainMenuState.h  Makefile  State.cpp  State.h  Statphys.vcxproj  Statphys.vcxproj.filters  box.cpp  distributions.cpp  estimators.cpp  main.cpp  molecule.cpp  output.txt  result  saved.cpp  trace.cpp  vis_nikita.cpp  visualization.cpp  window.ini
Statphys/text/: Dima.xcf  Menu_button.cpp  Menu_button.h
